--- a/app/views/devise/shared/_links.haml
+++ b/app/views/devise/shared/_links.haml
@@ -1,5 +1,5 @@
 - if controller_name != 'sessions'
-  = link_to "Sign in", user_session_new_path(resource_name)
+  = link_to "Sign in", new_user_session_path(resource_name)
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
   = link_to "Sign up", new_registration_path(resource_name)
