--- a/app/views/admin/products/edit.html.haml
+++ b/app/views/admin/products/edit.html.haml
@@ -78,7 +78,7 @@
           .panel-header
             Common Attributes
           .centered-box
-            = render :partial => 'common_attrs',                      |
+            = render :partial => 'product_attrs',                     |
               :locals => {:requestor => 'Edit', :product => @product, |
               :product_family => @product_family}                     |
       #family-attrs-box.floating-box
