--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -24,7 +24,7 @@
     #common-attrs-box > .box-with-border > .centered-box {
       margin-top:0.5em;
       width: 47em;
-      background-color:darkgoldenrod;
+      background-color:#ddd;
       margin-bottom:0.5em;
     }
     #attributes-box {
@@ -65,7 +65,7 @@
 
 <% content_for(:body) do %>
 
-  <%= base_error_messages_for(:product) %>
+  <%= error_messages_for(:product) %>
 
   <div id="content-area">
 
