--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -82,7 +82,7 @@
 	margin-bottom:0.25em;
 	text-align:center;
 	border: 0.2em solid grey;
-	background-color:#DFD;
+	background-color:#bbb;
 	-webkit-border-radius: 10px;
 	-khtml-border-radius: 10px;	
 	-moz-border-radius: 10px;
